*Thu Dec 19 22:19:21 EST 2013 Henri Gavin <hpgavin> 0.20130317
- add .csv versions of all examples to web site and to download collection

*Tue Dec 17 22:19:21 EST 2013 Henri Gavin <hpgavin> 0.20130317
- user_manual.html ... change .bash_profile to .profile

*Mon Dec 16 22:19:21 EST 2013 Henri Gavin <hpgavin> 0.20130317
- user_manual.html ... change .bashrc to .bash_profile
- user_manual.html ... change .cshrc  to .login

*Tue Jun 18 14:17:15 EDT 2013 Henri Gavin <hpgavin> 0.20130317
- new function peak_internal_forces
- write peak internal element forces to output data file

*Mon Jun 17 11:47:25 EDT 2013 Henri Gavin <hpgavin> 0.20130317
- add listing of maximum and minimum element forces, moments, and displacements to the internal force output data file
- updated usr-manual.html with these changes

*Wed Apr 17 14:27:47 EDT 2013 Henri Gavin <hpgavin> 0.20130317
- bug blocking matrix condensation calculations found and fixed
- more verbose run-time output to help find input data problems in condensation data
- if the number of animated modes, omit the line with the list of modes to anmimate, nA, is set to 0 (zero).
 
*Mon 20 Mar 2013 <john.pye@anu.edu.au> 0.20130317
- Small edit to user-manual (John Pye email)

*Mon 17 Mar 2013 <john.pye@anu.edu.au> 0.20130317
- Update SCons build for renamed files eg HPGmatrix.c

*Sat Mar 9 2013 Henri Gavin <.> 0.02100105
- frame3dd_io.c - fix bug in writing undeformed mesh with data check only

*Wed Mar 6 2013 Henri Gavin <.> 0.02100105
- add error check on input data for unconnected nodes, with output error code 42

*Wed Feb 20 2013 Henri Gavin <.> 0.02100105
- sourceforge upgrade:
- svn switch --relocate
- ... https://frame3dd.svn.sourceforge.net/svnroot/frame3dd
- ... https://svn.code.sf.net/p/frame3dd/code/

*Wed Feb 20 2013 Henri Gavin <.> 0.02100105
- frame3dd_io.c and user-manual.html - update gnuplot to version 4.6 

*Mon Feb 11 2013 Henri Gavin <.> 0.02100105