@@ -193,8 +193,8 @@ Several examples are given at <a href="http://frame3dd.sourceforge.net/">http://
 <ul>
 <li>Comments may be placed anywhere in the file and are helpful in organizing the Input Data.
 <br>
-A comment begins with one of the following four characters <b># % ? ; </b> and continues to the end of the line.
-<li>All commas in the Input Data are ignored.
+A comment begins with one of the following three characters <b># % ?</b> and continues to the end of the line.
+<li>All commas and semi-colons in the Input Data are ignored.
 <li>Floating point numbers must be entered as 1.234 1234 or 1.234e3.
 <li>Arithmetic expressions such as 1.234*10^3 or 6*sin(pi/2) are <b>not</b> allowed
 in the Input Data (unless the <a href="#Matlab">Matlab interface</a> is used).
